tests/error/poly_errors/arg_mismatch2.err
Guppy compilation failed. Error in file $FILE:17

15:    @guppy(module)
16:    def main() -> None:
17:        foo(False)
               ^^^^^
GuppyTypeError: Expected argument of type `(?T, ?T)`, got `bool`
